增加固定资产ID
