# golang/lcyutils/models/device_list_info_full.go
@@ -132,6 +132,9 @@ type DeviceListInfoFullDataItems0 struct {
 	// categories
 	Categories string `json:"categories,omitempty"`
 
+	// gdzc number
+	GdzcNumber string `json:"gdzc_number,omitempty"`
+
 	// id
 	ID string `json:"id,omitempty"`
 
