# golang/lcyutils/swagger.yaml
@@ -113,6 +113,10 @@ paths:
           in: "query"
           required: true
           type: "string"
+        - name: "gdzc_number"
+          in: "query"
+          required: true
+          type: "string"
 
       responses:
         200:
@@ -210,6 +214,8 @@ definitions:
               type: "string"
             status:
               type: "string"
+            gdzc_number:
+              type: "string"
 
   DeviceListInfo:
     type: "object"
@@ -231,6 +237,8 @@ definitions:
               type: "string"
             status:
               type: "string"
+            gdzc_number:
+              type: "string"
   DeviceInfo:
     type: "object"
     properties:
@@ -251,6 +259,8 @@ definitions:
       yikatong:
         type: "string"
       position:
+        type: "string"
+      gdzc_number:
         type: "string"
 
   ApiResponse:
